--- a/client/src/index.css
+++ b/client/src/index.css
@@ -110,9 +110,9 @@ body {
 
 @media(max-width: 768px) {
   .back-btn {
-    position: relative;
+    position: absolute;
     margin-bottom: 1rem;
-    top: 0.2rem;
+    top: 1rem;
   }
 }
 
